# hyprtiki

./: .gitignore  CMakeLists.txt  LICENSE  README.md  embed_audio.py
src/: CMakeLists.txt  main.cpp
